# snn-robotic-trunk

./: CMakeLists.txt  LICENSE  README.md  RobotArmInference.cpp  RobotArmPredictor.cpp
src/SNN/Gradients/: BackPropagatedGradient.h  CurrentInputGradient.h  EligibilityBackPropagatedGradient.h  FastFiringRateGradient.h  FiringRateGradient.h  FixedBroadcastGradient.h  LeakyReadoutGradient.h
src/SNN/Interfaces/: BasicGradient.h  BasicNetwork.h  BasicNetworkOptions.h  BasicNeuron.h  BasicOptimizer.h  BasicSynapse.h
src/SNN/Kernels/GPU/: AdaptiveLeakyIntegrateAndFireKernel.cu  FullyConnectedAdaptiveLeakyIntegrateAndFireKernel.cu  FullyConnectedBackPropagationInputOutputKernel.cu  FullyConnectedDeltaErrorKernel.cu  FullyConnectedFastFiringRateKernel.cu  FullyConnectedFixedBroadcastKernel.cu  FullyConnectedFixedBroadcastKernelCaller.cu  FullyConnectedFixedBroadcastKernelCaller.h  FullyConnectedHiddenSpikePropagationKernel.cu  FullyConnectedInputOutputKernel.cu  FullyConnectedInputSpikePropagationKernel.cu  FullyConnectedLeakyIntegrateAndFireEligibilityGradientKernel.cu  FullyConnectedLeakyIntegrateAndFireFixedBroadcastKernel.cu  FullyConnectedLeakyIntegrateAndFireKernel.cu  FullyConnectedLeakyReadoutGradientKernel.cu  FullyConnectedSpikePropagationKernel.cu  InputOutputKernel.cu  LeakyIntegrateAndFireKernel.cu  LongShortTermMemoryBackPropagationBackwardPassKernel.cu  LongShortTermMemoryBackPropagationForwardPassKernel.cu  LongShortTermMemoryEligibilityGradientKernel.cu  LongShortTermMemoryFiringRateKernel.cu  LongShortTermMemoryFixedBroadcastKernel.cu  LongShortTermMemoryGradientCollectionKernel.cu  LongShortTermMemoryInputEligibilityKernel.cu  LongShortTermMemoryInputEligibilityLearnSignalErrorKernel.cu  LongShortTermMemoryInputErrorKernel.cu  LongShortTermMemoryKernel.cu  LongShortTermMemoryKernelCaller.cu  LongShortTermMemoryKernelCaller.h  LongShortTermMemoryLeakyReadoutGradientKernel.cu  LongShortTermMemoryLearnSignalKernel.cu  LongShortTermMemorySparseEligibilityBackPropagationGradientKernel.cu  LongShortTermMemorySparseEligibilityGradientKernel.cu  LongShortTermMemorySparseFiringRateKernel.cu  LongShortTermMemorySparseForwardPassKernel.cu  LongShortTermMemorySparseGradientCollectionKernel.cu  LongShortTermMemorySparseKernel.cu  LongShortTermMemorySparseKernelCaller.cu  LongShortTermMemorySparseKernelCaller.h  (+12 more)
src/SNN/Networks/: LongShortTermMemoryEligibilityNetwork.cpp  LongShortTermMemoryEligibilityNetwork.h  RealisticRobotArmV2InferenceNetwork.cpp  RealisticRobotArmV2InferenceNetwork.h  RealisticRobotArmV2PredictorNetwork.cpp  RealisticRobotArmV2PredictorNetwork.h  RealisticRobotArmV3InferenceNetwork.cpp  RealisticRobotArmV3InferenceNetwork.h  RealisticRobotArmV3PredictorNetwork.cpp  RealisticRobotArmV3PredictorNetwork.h
src/SNN/Neurons/: AdaptiveLeakyIntegrateAndFireNeuron.h  CurrentInputNeuron.h  LeakyIntegrateAndFireNeuron.h  LeakyReadoutNeuron.h
src/SNN/Optimizers/: AMSGradOptimizer.h  AdamOptimizer.h  SignDampedMomentumOptimizer.h  StochasticGradientDescentOptimizer.h
src/SNN/Options/: LongShortTermMemoryEligibilityNetworkOptions.h  RobotArmInferenceNetworkOptions.h  RobotArmPredictorNetworkOptions.h
src/SNN/Synapses/: AdaptiveLeakyIntegrateAndFireSynapse.h  LeakyIntegrateAndFireSynapse.h  LeakyReadoutSynapse.h
src/SNN/Visualizations/: BasicRobotArmModule.h  BasicRobotArmSimulation.h  RealisticRobotArmGripperV2.h  RealisticRobotArmGripperV3.h  RealisticRobotArmModuleV2.h  RealisticRobotArmModuleV3.h  RealisticRobotArmSimulationV2.cpp  RealisticRobotArmSimulationV2.h  RealisticRobotArmSimulationV3.cpp  RealisticRobotArmSimulationV3.h  RobotArmPrediction.h  STLObject.h  STLRobotArmModule.h  Simple3DInteractorStyle.h  SimpleRobotArmPrediction.h  VTK3DObject.cpp  VTK3DObject.h  VTK3DWindow.cpp  VTK3DWindow.h  VTKCone.h  VTKCube.h  VTKGrid.h  VTKInteractor.cpp  VTKInteractor.h  VTKLine.h  VTKPlotObject.cpp  VTKPlotObject.h  VTKPlotWindow.cpp  VTKPlotWindow.h  VTKSphere.h  VTKWindow.cpp  VTKWindow.h  VTKWorldBorders.h
src/SNN/utils/: BasicGPUArray.h  BasicGradientSerializer.h  BasicNeuronSerializer.h  BasicSerializer.h  BasicSynapseSerializer.h  CudaUtils.h  FeedbackWeightsSerializer.h  GPUArray.cu  Image.cpp  Image.h  SmartTrainSet.h  Threads.cpp  Threads.h  arduino-serial-lib.cpp  arduino-serial-lib.h  utils.cpp  utils.h
